# Akari

./: .env-dev-example  .env-docker-example  .gitignore  .gitpod.yml  .pre-commit-config.yaml  20230630_rev1_up_rev2.sql  Makefile  README.md  changelog.md  codecov.yml  docker-compose-dev.yml  docker-compose-example.yml  docker-compose-staging.yml  docker-compose.yml  migration-runner.py  migrations-runner.py  noxfile.py  pyproject.toml  schema.prisma  schema.sql
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql.yml  dependabot-auto-merge  dependabot-auto-merge.yml  docker-build-ghcr.yml  docker-build-hub.yml  docker-build.yml  docker-pg-build.yml  lint.yml  snyk.yml  tests.yml
Alpine-Docker/: Dockerfile  start.sh
Bot/: akari.py  akaribot.py  akaricore.py  launcher.py  test_cache_utils.py
Bot-Legacy/: akari.py
Bot-Legacy/Cogs/: info.py  interaction-failure-handler.py  tags.py
Bot-Legacy/Libs/akari_admin_logs/: __init__.py
Bot-Legacy/Libs/akari_cache/: __init__.py  cache.py  key_builder.py
Bot-Legacy/Libs/akari_models/: __init__.py
Bot-Legacy/Libs/akari_modmail/: __init__.py  models.py
Bot-Legacy/Libs/akari_servers/: __init__.py  models.py  utils.py
Bot-Legacy/Libs/akari_tags_utils/: __init__.py
Bot-Legacy/Libs/akari_ui_components/: __init__.py  selects.py  views.py
Bot-Legacy/Libs/akari_utils/: __init__.py
Bot/Cogs/: admin.py  akari.py  fun.py  help.py  info.py  interaction-failure-handler.py  ipc-server.py  ipc.py  modmail.py  ping-redis.py  redis-ping.py  roles.py  server-setup.py  tags.py
Bot/Libs/akari_admin_logs/: logs.py  models.py
Bot/Libs/akari_cache/: cache.py  key_builder.py
Bot/Libs/akari_models/: models.py
Bot/Libs/akari_modmail/: __init__.py  models.py
Bot/Libs/akari_servers/: models.py  utils.py
Bot/Libs/akari_tags_utils/: models.py  tags.py
Bot/Libs/akari_ui_components/: __init__.py  modals.py  selects.py  views.py
Bot/Libs/akari_utils/: db_context_manager.py
Bot/Libs/cache/: __init__.py  cache.py  cache_obj.py  cpm.py  decorators.py  gcpm.py  key_builder.py  redis_cache.py
Bot/Libs/cog_utils/tags/: __init__.py  utils.py
Bot/Libs/models/: schema.prisma
Bot/Libs/tags/: __init__.py  cache_utils.py  format_utils.py
Bot/Libs/ui/tags/: __init__.py  modals.py  pages.py  views.py
Bot/Libs/utils/: __init__.py  akari_logger.py  datetime_utils.py  embeds.py  ensure_db_connections.py
Bot/Libs/utils/pages/: __init__.py  base_pages.py  modals.py  paginator.py  sources.py
Bot/Libs/utils/redis/: __init__.py  conn.py  gconn.py  redis_conn_pool.py
Bot/migrations/: V1__Initial_migration.sql
Bot/unloaded-cogs/: events.py  help.py
Debian-Docker/: Dockerfile  start.sh
Docker/: Dockerfile  start.sh
Docker/Alpine-Docker/: Dockerfile  start.sh
Docker/Debian-Docker/: Dockerfile
Docker/pg/: Dockerfile
Docs/source/: conf.py  index.rst
Envs/: dev.env  docker.env
Lib/akari_tags_utils/: __init__.py  models.py  tags.py
Libs/akari_tags_utils/: models.py  tags.py
Migrations/: 20230528_initial_up_rev1.sql  20230805_initial_up_rev1.sql
Postgres-Docker/: Dockerfile  init.sh
Scripts/: postgres-init.py  seeder.py
Tests/redis/: test_akaricpm.py  test_cache_deco.py  test_conns.py  test_gcache.py  test_key_builder.py  test_redis_backoff.py  test_redis_cache.py  test_redis_check.py  test_redis_conn_cache_pool.py  test_redis_memcache.py
Tests/redis/data/: redis_test.json
Tests/utils/: test_backoff.py  test_datetime_utils.py  test_ensure_db_conns.py
docs/: Makefile
docs/source/: conf.py  index.rst
migrations/: V1__Initial_migration.sql
