[tool.poetry]
name = "Akari"
version = "0.2.0"
description = "A utliity toolkit bot for Discord support servers"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "^1.0.0"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
uvloop = "^0.17.0"
orjson = "^3.9.7"
discord-py = {extras = ["voice"], version = "^2.3.2"}
redis = {extras = ["hiredis"], version = "^5.0.0"}
ciso8601 = "^2.3.0"
anyio = "^3.7.1"
better-ipc = "^2.0.3"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus", rev = "8686b5d1bbc1d3c862292eb436ab630d6e9c9b53"}
asyncpg = "^0.28.0"
asyncpg-trek = "^0.3.1"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pyinstrument = "^4.5.3"
pyright = "^1.1.325"
watchfiles = "^0.20.0"
jishaku = "^2.5.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"

[tool.poetry.group.docs.dependencies]
sphinx = "7.1.2"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
sphinxawesome-theme = "^5.0.0b3"
sphinxemoji = "^0.2.0"
sphinx-design = "^0.5.0"


[tool.pyright]
include = ["Bot/**"]
exclude = ["**/__pycache__", "**/.mypy_cache", "**/.dmpypy.json", "Bot/Cogs/tags.py"]
ignore = ["Docker"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.isort]
profile = 'black'

[tool.bandit]
skips = ["B311", "B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
